Add support for csrf tokens

--- a/config.dist.json
+++ b/config.dist.json
@@ -11,6 +11,10 @@
     "apiKey": "raxApiKey",
     "notificationPlan": "npId",
   },
+  "webserver": {
+    "host": "127.0.0.1",
+    "port": 3000
+  },
   "webhook": {
     "host": "127.0.0.1",
     "port": 8484,
